[metadata]
name = dptools
version = 22.1
author = DFTB+ developers
author_email = info@dftbplus.org
url = http://www.dftbplus.org
description = Tools to process DFTB+ related data
long_description = file: README.rst
long_description_content_type = text/x-rst
license = LGPL License
platform = platform independent
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: LGPL License
    Programming Language :: Python
    Environment :: Console
    Operating System :: OS Independent
    Topic :: Scientific/Engineering

[options]
include_package_data = True
package_dir =
    = src
packages = dptools
scripts =
    bin/dp_bands
    bin/dp_dos
    bin/gen2cif
    bin/gen2xyz
    bin/makecube
    bin/repeatgen
    bin/xyz2gen
    bin/straingen
install_requires =
    wheel
    setuptools
    numpy
    dftbplus-ptools

[options.packages.find]
where = src
