[metadata]
name = dptools
version = 22.2.0
author = DFTB+ developers
author_email = info@dftbplus.org
url = http://www.dftbplus.org
description = Tools to process DFTB+ related data
long_description = file: README.rst
long_description_content_type = text/x-rst
license = LGPL License
platform = platform independent
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: LGPL License
    Programming Language :: Python
    Environment :: Console
    Operating System :: OS Independent
    Topic :: Scientific/Engineering

[options]
include_package_data = True
package_dir =
    = src
packages = dptools
install_requires =
    numpy
    dftbplus-ptools

[options.entry_points]
console_scripts =
    dp_bands = dptools.dp_bands:main
    dp_dos = dptools.dp_dos:main
    gen2cif = dptools.gen2cif:main
    gen2xyz = dptools.gen2xyz:main
    makecube = dptools.makecube:main
    repeatgen = dptools.repeatgen:main
    straingen = dptools.straingen:main
    xyz2gen = dptools.xyz2gen:main

[options.packages.find]
where = src
