[metadata]
name = dptools
version = 23.1
author = DFTB+ developers
url = http://www.dftbplus.org
description = Tools to process DFTB+ related data
long_description = file: README.rst
long_description_content_type = text/x-rst
license = LGPL License
platform = platform independent
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: LGPL License
    Programming Language :: Python
    Environment :: Console
    Operating System :: OS Independent
    Topic :: Scientific/Engineering

[options]
include_package_data = True
packages = find:
install_requires =
    numpy

[options.entry_points]
console_scripts =
    dp_bands = dptools.scripts.dp_bands:main
    dp_dos = dptools.scripts.dp_dos:main
    gen2cif = dptools.scripts.gen2cif:main
    gen2xyz = dptools.scripts.gen2xyz:main
    makecube = dptools.scripts.makecube:main
    repeatgen = dptools.scripts.repeatgen:main
    straingen = dptools.scripts.straingen:main
    xyz2gen = dptools.scripts.xyz2gen:main

[options.packages.find]
where = src
