[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dftbplus"
version = "0.1"
authors = [{name = "DFTB+ developers"},]
dependencies = ["numpy",]
requires-python = ">=3.10"
description = "Python interface to DFTB+"
readme = {file = "README.rst", content-type = "text/x-rst"}
license = {text = "BSD"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "http://www.dftbplus.org"
Documentation = "https://dftbplus-recipes.readthedocs.io/en/latest/"
Repository = "https://github.com/dftbplus/dftbplus.git"
Issues = "https://github.com/dftbplus/dftbplus/issues"
Changelog = "https://github.com/dftbplus/dftbplus/blob/main/CHANGELOG.rst"
