[metadata]
name = pythonapi
version = 0.1
author = DFTB+ developers
url = http://www.dftbplus.org
description = Python interface to DFTB+
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD
license_file = LICENSE
platform = any
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.7

[options]
include_package_data = True
package_dir =
    = src
install_requires =
    numpy

[options.packages.find]
where = src
